@@ -272,6 +272,12 @@
       </listitem>
     </itemizedlist>
 
+    <itemizedlist>
+      <listitem>
+        <para>WordArt</para>
+      </listitem>
+    </itemizedlist>
+
     <para><emphasis role="bold">Other Options</emphasis></para>
 
     <itemizedlist>
