@@ -902,7 +902,7 @@ OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 OpenXML_FILTER_NAME=Fichiers Microsoft Open XML
 OpenXML_FILTER_OPTIONS=Options du filtre Open XML
 OpenXML_WORD=Word
-OpenXML_TRANSLATE_HIDDEN_TEXT=&Texte d'instructions non visible
+OpenXML_TRANSLATE_HIDDEN_TEXT=Non-visible Instruction Te&xt
 OpenXML_TRANSLATE_COMMENTS=Co&mmentaires
 OpenXML_TRANSLATE_FOOTNOTES=&Notes de bas de page
 OpenXML_TRANSLATE_ENDNOTES=Notes de &fin de document
@@ -919,6 +919,7 @@ OpenXML_GLOBAL=Globales
 OpenXML_TRANSLATE_CHARTS=Graphi&ques
 OpenXML_TRANSLATE_DIAGRAMS=Dia&grammes
 OpenXML_TRANSLATE_DRAWINGS=De&ssins
+OpenXML_TRANSLATE_WORDART=&WordArt
 OpenXML_GENERIC_OPTIONS=Autres options :
 OpenXML_AGGREGATE_TAGS=Agr\u00e9ger les &balises
 OpenXML_PRESERVE_SPACES=Pr\u00e9se&rver les espaces pour toutes les balises
@@ -1347,3 +1348,4 @@ LT_OPTIONS_MENU_ENABLED=V\u00e9rificateur linguistique
 
 # org.omegat.gui.dialogs.TeamOptionsDialog
 PROXY_LOGIN_DIALOG=Utilisateur et mot de passe pour proxy
+OpenXML_TRANSLATE_WORDART=&WordArt
